# Simple-ImGui-Setup

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: App.cpp  App.hpp  ImGuiWrapper.cpp  ImGuiWrapper.h  main.cpp
